Fix YAML validation issues

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -103,7 +103,7 @@ entries:
   - id: "Berger and Russell 1984"
     full: "Berger, Gustav A., and William H. Russell. 1984. “The New Stress Tests on Canvas Paintings and Some of Their Implications on the Preservation of Paintings.” In *ICOM Committee for Conservation: 7th Triennial Meeting, Copenhagen, 10–14 September 1984: Preprints*, 84/2/7–9. Paris: International Council of Museums."
   - id: "Berger and Russell 1986"
-    full: "Berger, Gustav A., and William H. Russell. 1986. “Investigations into the Reactions of Plastic Materials to Environmental Changes, Part I: The Mechanics of Decay of Paint Films.” *Studies in Conservation* 31: 49–64."  
+    full: "Berger, Gustav A., and William H. Russell. 1986. “Investigations into the Reactions of Plastic Materials to Environmental Changes, Part I: The Mechanics of Decay of Paint Films.” *Studies in Conservation* 31: 49–64."
   - id: "Berger and Russell 1988"
     full: "Berger, Gustav A., and William H. Russell. 1988. “An Evaluation of the Preparation of Canvas Paintings Using Stress Measurements.” *Studies in Conservation* 33, no. 4: 187–204."
   - id: "Berger and Russell 1990"
@@ -129,7 +129,7 @@ entries:
   - id: "Bissell 1968"
     full: "Bissell, R. Ward. 1968. “Artemisia Gentileschi—A New Documented Chronology.” *The Art Bulletin* 50, no. 2, 153–168."
   - id: "Bissell 1999"
-    full: "Bissell, R. Ward. 1999. *Artemisia Gentileschi and the Authority of Art: Critical Reading and Catalogue Raisonné.* University Park: Pennsylvania State University Press; London: Eurospan."    
+    full: "Bissell, R. Ward. 1999. *Artemisia Gentileschi and the Authority of Art: Critical Reading and Catalogue Raisonné.* University Park: Pennsylvania State University Press; London: Eurospan."
   - id: "Blakney 1993"
     full: "Blakney, Susan. 1993. “The Successful Use of Soft-Faced Monomesh as the Lining Support for a 14’ by 17’ Mural.” In *AIC Paintings Group Postprints, Denver, Colorado*, 25."
   - id: "Blakney and Sutton 1983"
@@ -150,8 +150,8 @@ entries:
     full: "Boitelle, R., R. Poggendorf, and L. Stevenson. Forthcoming. “A Decisive Experience: A Technical Examination of Martinique Paintings by Paul Gauguin and Charles Laval.” In *Gauguin and Laval in Martinique*. Amsterdam: Van Gogh Museum."
   - id: "Bol 1991"
     full: "Bol, L. J. 1991. *Aart Schouman: Ingenious Painter and Draughtsman*. Doornspijk: Davaco. de Witte, E., S. Florquin, and M. Goessens-Landrie. 1984. “Influence of the Modification of Dispersions on Film Properties.” In *Adhesives and Consolidants: Preprints of the Contributions to the Paris Congress, 2–8 September 1984*, edited by N. S. Brommelle. London: International Institute for Conservation of Historic and Artistic Works."
-  - id: "Bomford 1978"    
-    full: "Bomford, David. 1978. “The Conservation Department of the National Gallery.” *National Gallery Technical Bulletin* 2: 3–10. http://www.nationalgallery.org.uk/technical-bulletin/bomford1978."   
+  - id: "Bomford 1978"
+    full: "Bomford, David. 1978. “The Conservation Department of the National Gallery.” *National Gallery Technical Bulletin* 2: 3–10. http://www.nationalgallery.org.uk/technical-bulletin/bomford1978."
   - id: "Bomford 2003"
     full: "Bomford, David. 2003. “The Conservator as Narrator: Changed Perspectives in the Conservation of Paintings.” In *Personal Viewpoints: Thoughts about Painting Conservation: A Seminar Organized by the J. Paul Getty Museum, the Getty Conservation Institute, and the Getty Research Institute at the Getty Center, Los Angeles, June 21–22, 2001*, edited by M. Leonard, 1–12. Los Angeles: Getty Conservation Institute."
   - id: "Bomford 2005"
@@ -475,7 +475,7 @@ entries:
   - id: "Flock 2014"
     full: "Flock, Hannah. 2014. *Neue Untersuchungen zur Rissschließung in Leinwandbildträgern: Uni- und biaxiale Zugprüfungen an Prüfkörpern aus verklebtem Leinengarn und -gewebe sowie freien Klebstofffilmen. Kölner Beiträge zur Restaurierung und Konservierung von Kunst- und Kulturgut, Digitale Edition Band 2.* Cologne: CICS/FH Köln. <https://epb.bibl.th-koeln.de/frontdoor/deliver/index/docId/601/file/Flock_MA.pdf>."
   - id: "Flock et al. 2019"
-    full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Petra Demuth. 2019. “Störleim-Cellulosefaser-Gemische zur Einzelfadenverklebung.” *ZKK Zeitschrift für Kunsttechnologie und Konservierun*g, no. 1: 117–28."    
+    full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Petra Demuth. 2019. “Störleim-Cellulosefaser-Gemische zur Einzelfadenverklebung.” *ZKK Zeitschrift für Kunsttechnologie und Konservierun*g, no. 1: 117–28."
   - id: "Flock 2020a"
     full: "Flock, Hannah. 2020a. “Einzelfadenverklebung in der Gemälderestaurierung: Klebstoffe, Prüfsystematik und Ergebnisse.” PhD diss., UdS Saarbrücken. https://doi.org/10.22028/D291-34685"
   - id: "Flock et al. 2020b"
@@ -623,7 +623,7 @@ entries:
   - id: "Hedley, Hackney, and Cummings 2003"
     full: "Hedley, Gerry A., Stephen Hackney, and Alan J. Cummings. 2003. “Lining in a Vacuum Envelope with a Traversing Infrared Heat Source.” In *Lining Paintings: Papers from the Greenwich Conference on Comparative Lining Techniques*, edited by Caroline Villers, 83–86. London: Archetype."
   - id: "Hedley and Odlyha 1989"
-    full: "Hedley, Gerry, and Marianne Odlyha. 1989. “The Moisture Softening of Paint Samples and Its Implication for the Treatment of Fabric Supported Paintings.” In *Traitement des support. Travaux interdisciplinaires. Paris, 2,3 et 4 novembre 1989, 1989,* 157–62. Paris: Association des restaurateurs d'art et d'archéologie de formation universitaire.    
+    full: "Hedley, Gerry, and Marianne Odlyha. 1989. “The Moisture Softening of Paint Samples and Its Implication for the Treatment of Fabric Supported Paintings.” In *Traitement des support. Travaux interdisciplinaires. Paris, 2,3 et 4 novembre 1989, 1989,* 157–62. Paris: Association des restaurateurs d'art et d'archéologie de formation universitaire."
   - id: "Hedley and Odlyha 1993"
     full: "Hedley, Gerry, and Marianne Odlyha. 1993. “The Moisture Softening of Paint Samples and Its Implication for the Treatment of Fabric Supported Paintings.” In *Measured Opinions: Collected Papers on the Conservation of Paintings,* edited by Caroline Villers, 99–102. London: United Kingdom Institute for Conservation of Historic and Artistic Works. Also published as *Traitement des support. Travaux interdisciplinaires. Paris, 2,3 et 4 novembre 1989, 1989,* 157–62. Paris: Association des restaurateurs d'art et d'archéologie de formation universitaire."
   - id: "Hedley and Villers 1982"
@@ -683,7 +683,7 @@ entries:
   - id: "Howells et al. 1984"
     full: "Howells, Rachel, Aviva Burnstock, Gerry Hedley, and Stephen Hackney. 1984. “Polymer Dispersions Artificially Aged.” In *Adhesives and Consolidants: Contributions to the 1984 IIC Congress, Paris,* edited by Norman S. Brommelle, Elizabeth M. Pye, Perry Smith, and Gary Thomson, 36–43. London: International Institute for Conservation. Also published in *Studies in Conservation* 29, no. 1: 36–43."
   - id: "Howells et al. 1993"
-    full: "Howells, R., Aviva Burnstock, Gerry Hedley, and Stephen Hackney. 1993. “Polymer Dispersions Artificially Aged.” In *Measured Opinions: Collected Papers on the Conservation of Paintings*, edited by Caroline Villers, 27–34. London: United Kingdom Institute for Conservation of Historic and Artistic Works."    
+    full: "Howells, R., Aviva Burnstock, Gerry Hedley, and Stephen Hackney. 1993. “Polymer Dispersions Artificially Aged.” In *Measured Opinions: Collected Papers on the Conservation of Paintings*, edited by Caroline Villers, 27–34. London: United Kingdom Institute for Conservation of Historic and Artistic Works."
   - id: "Iaccarino Idelson 2009"
     full: "Iaccarino Idelson, Antonio. 2009. “About the Choice of Tension for Canvas Paintings.” *CeROArt: Les dilemmes de la restauration,* no. 4. https://doi.org/10.4000/ceroart.1269.” https://doi.org/10.4000/ceroart.1269."
   - id: "Iaccarino Idelson and Garofalo 2019"
@@ -731,7 +731,7 @@ entries:
   - id: "Keck and Keck 1962"
     full: "Keck, Caroline, and Sheldon Keck, dir. 1962. *Hidden Life of a Painting*. Audiovisual collection, Brooklyn Museum Archives, Brooklyn, NY. Digitized from 16 mm film."
   - id: "Keith et al. 2019"
-    full: "Keith, Larry, Letizia Trevez, Marta Melchiorre de Crescenzo, and Joanna Russell. 2019. “Artemisia Gentileschi’s Self-Portrait as St. Catherine of Alexandria.” *National Gallery Technical Bulletin* 40: 4–17."  
+    full: "Keith, Larry, Letizia Trevez, Marta Melchiorre de Crescenzo, and Joanna Russell. 2019. “Artemisia Gentileschi’s Self-Portrait as St. Catherine of Alexandria.” *National Gallery Technical Bulletin* 40: 4–17."
   - id: "Ketnath 1976"
     full: "Ketnath, A. 1976. “Acrylhartser ved konservering af malerier på laerred under anvendelse af ‘heat seal’ metoden.” *Meddelelser om konservering* 2, nos. 7–8: 223–35."
   - id: "Ketnath and Bøgh 1975"
@@ -813,7 +813,7 @@ entries:
   - id: "Macarrón, Calvo, and Gil 2015"
     full: "Macarrón, Ana, Ana Calvo, and Rita Gil. 2015. “European Recipes for Glue Lining Paste.” In *Sources on Art Technology: Back to Basics: Proceedings of the Sixth Symposium of the ICOM-CC Working Group Art Technological Source Research,* edited by Sigrid Eyb-Green, Joyce H. Townsend, Stefanos Kroustallis, Kathrin Pilz, and Idelette van Leeuwen, 139–40. London: Archetype."
   - id: "Macarrón, Calvo, and Gil 2016"
-    full: "Macarrón, Ana, Ana Calvo, and Rita Gil. 2016. “Documentation of European Recipes for Glue Paste Linings.” In *Sources on Art Technology: Back to Basics*, 139–40. London: Archetype."    
+    full: "Macarrón, Ana, Ana Calvo, and Rita Gil. 2016. “Documentation of European Recipes for Glue Paste Linings.” In *Sources on Art Technology: Back to Basics*, 139–40. London: Archetype."
   - id: "Macarrón, Calvo, and Gil 2017"
     full: "Macarrón, Ana, Ana Calvo, and Rita Gil. 2017. “Cas d’étude des rentoilages historiques à la colle de pâte en Europe: documentation et évaluation.” *Conservation Restauration de biens culturels. Retours d’expérience et regards rétrospectifs*, *6e colloque international de l’ARAAFU, Paris, Cité de l'architecture et du patrimoine, 26, 27 et 28 novembre 2014*, 35–42. Paris: ARAAFU."
   - id: "Macarrón, Calvo, and Gil 2018"
@@ -889,7 +889,7 @@ entries:
   - id: "Mehra 2003"
     full: "Mehra, Vishwa R. 2003. “A Low-Pressure Cold-Relining Table.” In *Lining Paintings: Papers from the Greenwich Conference on Comparative Lining Techniques*, edited by Caroline Villers, 121–24. London: Archetype."
   - id: "Melchiorre Di Crescenzo et al. 2019"
-    full: "Melchiorre Di Crescenzo, Marta, John K. Delaney, Catherine Higgitt, Joanna Russell, and Marika Spring. 2019. “Artemisia Gentileschi’s Self-Portrait as Saint Catherine of Alexandria: Hyperspectral Imaging and Technical Investigation of a New National Gallery Acquisition.” Paper presented at Technart 2019, Brugges, 7–10 May 2019."    
+    full: "Melchiorre Di Crescenzo, Marta, John K. Delaney, Catherine Higgitt, Joanna Russell, and Marika Spring. 2019. “Artemisia Gentileschi’s Self-Portrait as Saint Catherine of Alexandria: Hyperspectral Imaging and Technical Investigation of a New National Gallery Acquisition.” Paper presented at Technart 2019, Brugges, 7–10 May 2019."
   - id: "Melià Angulo, Fuster-López, and Vicente Escuder 2017"
     full: "Melià Angulo, Ana, Laura Fuster-López, and Angel Vicente Escuder. 2017. “Study of the Mechanical Properties of Selected Animal Glues and Their Implication When Designing Conservation Strategies.” *CeROArt: conservation, exposition, restauration d’objets d’art,* HS 2017. <https://doi.org/10.4000/ceroart.5152>."
   - id: "Messens 2003"
@@ -1109,9 +1109,7 @@ entries:
   - id: "Rella and Saccani 2006"
     full: "Rella, Luigi, and Lucia Saccani. 2006. *Un restauro ragionato. La Crocifissione di Stephan Kessler*, Cuaderno 3 CESMAR7. Saonara, Italy: Il Prato."
   - id: "Reuber 2010"
-    full: "Reuber, Lena. 2010. *Klebstoffe für die Rissverklebung an Leinengeweben. Kölner Beitrage*
-    *zur Restaurierung und Konservierung von Kunst- und Kulturgut. Digitale Edition Band*
-    *1*. Cologne: Cologne Institute of Conservation Sciences/FH Köln. <https://epb.bibl.th-koeln.de/frontdoor/deliver/index/docId/209/file/Reuber_Lena.pdf>."
+    full: "Reuber, Lena. 2010. *Klebstoffe für die Rissverklebung an Leinengeweben. Kölner Beitrage zur Restaurierung und Konservierung von Kunst- und Kulturgut. Digitale Edition Band 1*. Cologne: Cologne Institute of Conservation Sciences/FH Köln. <https://epb.bibl.th-koeln.de/frontdoor/deliver/index/docId/209/file/Reuber_Lena.pdf>."
   - id: "Reumann 2000"
     full: "Reumann, Ralf-Dieter. 2000. “Mechanisches Formänderungsverhalten textiler Materialien.” In *Prüfverfahren in der Textil- und Bekleidungstechnik,* edited by Ralf-Dieter Reumann, 57–125. New York, Berlin, Heidelberg: Springer-Verlag."
   - id: "Revez 2016"
@@ -1319,7 +1317,7 @@ entries:
   - id: "Tsuchiya et al. 2015"
     full: "Tsuchiya, Yuko, Hiroshi Haze, Eriko Nakau, Kumi Masuda, Marie Moto, Hiroshi Wada, Tominori Araki, Nobuyuki Kamba. 2015. “Conservation Treatment for Recovery Efforts After the Disaster with Cultural Assets: Experiments of Desalination for Paintings on Linen Canvas.” In *The Japan Society for the Conservation of Cultural Property 37th Conference Preprints, Kyoto (Japan), 27–28 June 2015*, 86–87."
   - id: "Tsuchiya et al. 2017"
-    full: "Tsuchiya, Yuko, Eriko Hoshi, Marie Moto, Hiroshi Haze, and Nobuyuki Kamba. 2017. “Stabilization of Canvas Paintings Damaged by Tsunami: Desalination of Blotter Washing to Acrylic Paintings on Cotton Canvas.” In *The Japan Society for the Conservation of Cultural Property 39th Conference Preprints, Kanazawa (Japan) ,1–2 July 2017*, 28–29."    
+    full: "Tsuchiya, Yuko, Eriko Hoshi, Marie Moto, Hiroshi Haze, and Nobuyuki Kamba. 2017. “Stabilization of Canvas Paintings Damaged by Tsunami: Desalination of Blotter Washing to Acrylic Paintings on Cotton Canvas.” In *The Japan Society for the Conservation of Cultural Property 39th Conference Preprints, Kanazawa (Japan) ,1–2 July 2017*, 28–29."
   - id: "Tudor-Hart 1931"
     full: "Tudor-Hart, P. 1931. “Nettoyage, rentoilage et vernissage des peintures.” *Mouseion* 15, no. 3: 23–40."
   - id: "Tumosa and Mecklenburg 2004"
