Fixed Cherkasova citation
I wasn't able to verify 100%, but I think the correct spelling is Zinaida Tcherkasova, not Zoya Cherkasova. There are discrepancies across the author files.

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -534,8 +534,8 @@ entries:
     full: "Gómez, María Luisa. 1998. *La restauración. Examen científico aplicado a la conservación de obras de arte.* Madrid: “Cátedra.”"
   - id: "González Mozo and Alonso 2011"
     full: "González Mozo, Ana, and Rafael Alonso. 2011. “Reflexión ante la restauración del *Pasmo de Sicilia*, de Rafael.” *Boletín del Museo del Prado* 24, no. 47: 104–19."
-  - id: "Gorin and Cherkasova 1977"
-    full: "Gorin, Ivan, and Zoya Cherkasova, eds. 1977. *Conservation of Easel Oil Paintings: Teaching Guide for Secondary Art Schools.* Moscow: Iskusstvo."
+  - id: "Gorin and Tcherkasova 1977"
+    full: "Gorin, Ivan, and Zinaida Tcherkasova, eds. 1977. *Conservation of Easel Oil Paintings: Teaching Guide for Secondary Art Schools.* Moscow: Iskusstvo."
   - id: "Götz and Oberthaler 2013"
     full: "Götz, Eva, and Elke Oberthaler. 2013. “The Relocation of the Picture Gallery’s Collection from Inzersdorf to the Central Storage Facility in Himberg.” In *Technologische Studien,* vols. 9–10, special vol. (*Storage)*, edited by Kunsthistorisches Museum and Sabine Haag, 152–181. Vienna: Kunsthistorisches Museum. https://www.khm.at/fileadmin/content/KHM/Forschung/KHM_Technologische-Studien_9\_EN.pdf."
   - id: "Gowen 2012"
